feat!: add currentCarId to ChargingStation, add isCharging to Car, improve checks in rechargeController and add emits for charging-station-updated
